syntax = "proto3";

package userpb;

option go_package = "github.com/yoheimuta/xo-pb-grpc-example-app/infra/expgenproto/userpb";

// RegisterUserRequest represents a request for the RegisterUser method.
message RegisterUserRequest {
    // user_id represents a user's id. This is UUID v4. Required.
    string user_id = 1;
    // email_address represents an email address. Required.
    string email_address = 2;
    // password represents a raw password. Required.
    string password = 3;
}

// RegisterUserResponse represents a response for the RegisterUser method.
message RegisterUserResponse {
    // auth_token represents a authencation credential.
    string auth_token = 1;
}
